[gd_scene load_steps=8 format=3 uid="uid://c2ecjs5nrkkbv"]

[ext_resource type="Texture2D" uid="uid://k0lvqitsd6vj" path="res://resources/sprites/player.png" id="1_507aj"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_h8wqq"]
[ext_resource type="PackedScene" uid="uid://dm25u7ggw4421" path="res://scenes/components/BoardMovement.tscn" id="2_bg3fx"]
[ext_resource type="PackedScene" uid="uid://68qaj8geojvt" path="res://scenes/components/DialogReceiver.tscn" id="4_rng4q"]
[ext_resource type="PackedScene" uid="uid://bbc46ofx4e56b" path="res://scenes/components/MinigameReceiver.tscn" id="5_gnjys"]
[ext_resource type="PackedScene" uid="uid://cncr6mdgr06ls" path="res://scenes/components/GateControlerReceiver.tscn" id="6_ip3fa"]
[ext_resource type="PackedScene" uid="uid://dygwfrwu10f3r" path="res://scenes/components/KeyHolder.tscn" id="7_rlrr8"]

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_h8wqq")
_speed = null
_can_move = null

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("1_507aj")

[node name="BoardMovement" parent="." instance=ExtResource("2_bg3fx")]
position = Vector2(0, -6)

[node name="DialogReceiver" parent="." instance=ExtResource("4_rng4q")]
position = Vector2(0, -6)

[node name="MinigameReceiver" parent="." instance=ExtResource("5_gnjys")]

[node name="GateControlerReceiver" parent="." instance=ExtResource("6_ip3fa")]

[node name="KeyHolder" parent="." instance=ExtResource("7_rlrr8")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -6)
polygon = PackedVector2Array(-5, 5, -2, 7, 2, 7, 5, 5)

[node name="Camera2D" type="Camera2D" parent="."]
